[gd_scene load_steps=5 format=1]

[ext_resource path="res://controls/dialog.gd" type="Script" id=1]
[ext_resource path="res://fonts/averia80pt.tres" type="DynamicFont" id=2]
[ext_resource path="res://tileset/tileset.png" type="Texture" id=3]

[sub_resource type="Animation" id=2]

resource/name = "show_line"
length = 3.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("frame/text_label:percent_visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 3 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[node name="dialog" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 149.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="char_label" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.1, 0.1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 560.0
margin/bottom = 110.0
custom_fonts/normal_font = ExtResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = "P. CANDANGO:"
visible_characters = -1
percent_visible = 1.0

[node name="frame" type="Patch9Frame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 10.0
margin/right = 144.0
margin/bottom = 50.0
texture = ExtResource( 3 )
region_rect = Rect2( 352, 0, 24, 16 )
patch_margin/left = 2
patch_margin/top = 2
patch_margin/right = 2
patch_margin/bottom = 2

[node name="text_label" type="RichTextLabel" parent="frame"]

rect/scale = Vector2( 0.1, 0.1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 8.0
margin/top = 8.0
margin/right = 1288.0
margin/bottom = 568.0
custom_fonts/normal_font = ExtResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = true
bbcode/bbcode = "Ei, garoto! Cuidado com o buraco.
O vale da soma é um lugar perigoso,

não se esqueça de saltar obstáculos
e inimigos se quiser sobreviver."
visible_characters = -1
percent_visible = 1.0

[node name="anim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/show_line = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="test_timer1" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = true

[node name="test_timer2" type="Timer" parent="."]

process_mode = 1
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="timeout" from="test_timer1" to="." method="show_text" binds= [ "This is an example number 1" ]]

[connection signal="timeout" from="test_timer2" to="." method="show_text" binds= [ "Another Example 2", "Another Guy" ]]


